test/data/semantic-errors/type-error.ava
var anotherFunction = () -> true + 2;